--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feed-gateway",
   "version": "1.0.0",
-  "description": "Gateway unificado para feeds de YouTube e Notícias com WebSocket",
+  "description": "Gateway para feed de Notícias com WebSocket",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
@@ -13,7 +13,6 @@
     "websocket",
     "sse",
     "feed",
-    "youtube",
     "news"
   ],
   "author": "",
@@ -36,4 +35,3 @@
     "node": ">=18.0.0"
   }
 }
-
